fix for java17